# shingeki

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.nvim-personal/: callbacks.lua  launch_vs.ahk  setup.lua  stop_vs.ahk
_template_unused/: CONVENTIONS.md
cmd/: cli.py
projects/VS2022/raylib_game/: raylib_game.vcxproj
src/: CMakeLists.txt  base.cpp  debug_text.cpp  global.h  main.cpp  math.cpp  memory_arena.cpp  partikel.h  raylib_game.cpp  raylib_hack_windows.cpp  raylib_vector2.cpp  raylib_vector2.h  raylib_vector3.cpp  raylib_vector3.h  raylib_vector4.cpp  screen_ending.cpp  screen_gameplay.cpp  screen_logo.cpp  screen_options.cpp  screen_title.cpp  screens.cpp  tests.cpp
src/_template_unused/: Makefile  main.rc
src/assets/: STOLEN.md  unnamed_mesh1.vox
src/resources/screens/gameplay/: level.txt  particle_compute.glsl  particle_fragment.glsl  particle_vertex.glsl
