[tool.poetry]
name = "game-template"
version = "0.1.0"
description = ""
authors = ["Aleksei Chistov <aleksey.chistov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pyjson5 = "^1.6.6"
pillow = "^10.3.0"
fnvhash = "^0.1.0"
pyopengl = "^3.1.7"
pysdl2 = "^0.9.16"
pysdl2-dll = "^2.30.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
multi_line_output = 3
line_length = 90
include_trailing_comma = true
